--- a/disclaimer.html
+++ b/disclaimer.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 <meta charset="UTF-8">
-<title>Azurean Investment Managers</title>
+<title>Azurean Investment Managers - Fund offerings</title>
 <meta name="description" content="Consulte is a free Bootstrap HTML Template for Investment Company"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="profile" href="">
@@ -30,9 +30,9 @@
 
 
 <!-- Add site Favicon -->
-<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-<link rel="icon" href="images/favicon.png" type="image/x-icon">
-<meta name="msapplication-TileImage" content="images/favicon.png" />
+<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+<meta name="msapplication-TileImage" content="images/favicon.ico" />
 
 <!-- Structured Data  -->
 <script type="application/ld+json">
@@ -104,7 +104,12 @@
 							<div class="navbar-collapse show collapse clearfix" id="navbarSupportedContent">
 								<ul class="navigation clearfix">
 									<li><a href="index.html">Home</a></li>
-									<li><a href="about.html">About Us</a></li>
+									<li class="dropdown"><a href="#">About Us</a>
+										<ul>
+											<li><a href="about.html">About Us</a></li>
+											<li><a href="team.html">Team</a></li>
+										</ul>
+									</li>
 									<li><a href="fund-offerings.html">Fund Offerings</a></li>
 									<li><a href="media.html">Media</a></li>
 									<li><a href="contact.html">Contact</a></li>
@@ -143,7 +148,7 @@
     <!--End Main Header -->
 	
 	<!-- Banner Section -->
-	<div class="service-banner-section py-5" data-bg-image="images/background/service-bg.jpg">
+	<div class="service-banner-section py-5" data-bg-image="images/background/disclaimer-banner.jpg">
 		<div class="auto-container pb-5">
 			<div class="content-box pb-5">
 				<!-- <h2>Disclaimer</h2> -->
@@ -236,7 +241,8 @@
                                 <div class="footer-widget newsletter-widget">
 									<h5>Call us directly</h5>
 									<ul class="list-link">
-										<li><a class="phone" href="tel:+919923378853">+91 99233 78853</a></li>
+										<li><a class="phone" href="tel:+919923378853">+91 99233 78853</a>,</li>
+										<li><a class="phone" href="tel:+9960717455"> +91 99607 17455</a></li>
 										<li><a class="email" href="mailto:support@azurean.in">support@azurean.in</a></li>
 									</ul>
 								</div>
