--- a/team.html
+++ b/team.html
@@ -143,7 +143,7 @@
     <!--End Main Header -->
 
 	<!-- Banner Section -->
-	<div class="service-banner-section py-5" data-bg-image="images/background/team-banner.png">
+	<div class="service-banner-section py-5 d-none" data-bg-image="images/background/team-banner.png">
 		<div class="auto-container pb-5">
 			<div class="content-box pb-5">
 				<h2>Our <span>Team</span></h2>
@@ -265,12 +265,12 @@
                     <!-- Column -->
                     <div class="big-column col-lg-6 col-md-12 col-sm-6 col-12">
 						<div class="row clearfix">
-						
-                        	<!-- Footer Column -->
+
+							<!-- Footer Column -->
                             <div class="footer-column col-lg-6 col-md-6 col-sm-12">
                                 <div class="footer-widget logo-widget">
 									<div class="logo mt-4">
-										<a href="index.html"><img src="images/azurean_logo.png" alt="" /></a>
+										<a href="index.html"><img src="images/azurean_logo.png" alt="azurean logo" /></a>
 									</div>
 								</div>
 							</div>
@@ -280,11 +280,11 @@
                                 <div class="footer-widget links-widget">
 									<h5>Company</h5>
 									<ul class="list-link">
-										<li><a href="about.html">About Us</a></li>
-										<li><a href="team.html">Team</a></li>
+										<li><a href="azurean-approach.html">Azurean Approach</a></li>
 										<li><a href="fund-offerings.html">Fund Offerings</a></li>
+										<li><a href="newsletter.html">Newsletter</a></li>
 										<li><a href="media.html">Media</a></li>
-										<li><a href="contact.html">Contact Us</a></li>
+										<li><a href="contact.html">Contact</a></li>
 									</ul>
 								</div>
 							</div>
@@ -314,7 +314,6 @@
 									<h5>Call us directly</h5>
 									<ul class="list-link">
 										<li><a class="phone" href="tel:+919923378853">+91 99233 78853</a>,</li>
-										<li><a class="phone" href="tel:+9960717455"> +91 99607 17455</a></li>
 										<li><a class="email" href="mailto:support@azurean.in">support@azurean.in</a></li>
 									</ul>
 								</div>
@@ -348,8 +347,6 @@
 							<div class="col-lg-4 col-md-12 col-sm-12">
 								<ul class="social-nav">
 									<li><a target="_blank" href="https://www.linkedin.com/in/sampathreddy11/" class="icofont-linkedin"></a></li>
-									<li><a target="_blank" href="#" class="icofont-instagram"></a></li>
-									<li><a target="_blank" href="#" class="icofont-twitter"></a></li>
 								</ul>
 							</div>
 							
