--- a/media.html
+++ b/media.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Azurean Investment Managers - Fund offerings</title>
-<meta name="description" content="Consulte is a free Bootstrap HTML Template for Investment Company"/>
+<meta name="description" content=""/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="profile" href="">
 <link rel="canonical" href="Replace_with_your_PAGE_URL" />
@@ -157,6 +157,42 @@
 	<!-- End Banner Section -->
 
 	<div class="py-5">
+		<div class="auto-container">
+			<div class="row clearfix">
+				<div class="col-12">
+					<div class="card mb-5 pb-4 border-0 border-bottom rounded-0"	>
+						<div class="card-body">
+							<h5 class="card-title text-black">
+								<i class="icofont-link"></i> Bajaj Allianz Life CIO Sampath Reddy steps down, to start own fund</h5>
+							<p class="card-text">
+								As CIO since 2011, Reddy generated 300-400 bps returns on the insurer’s key flagship portfolios
+							  </p>
+							<a target="_blank" href="https://www.fortuneindia.com/people/bajaj-allianz-life-cio-sampath-reddy-steps-down-to-start-own-fund/118335" class="btn btn-primary primary-bg">Read more</a>
+						  </div>
+					  </div>
+					  <div class="card mb-3 pb-4 border-0 border-bottom rounded-0"	>
+						<div class="card-body">
+							<h5 class="card-title text-black">
+								<i class="icofont-link"></i> Wait and watch! Don’t jump the gun on Indian IT companies: Sampath Reddy</h5>
+							<p class="card-text">Sampath Reddy, Founder & CIO of Azurean Investment Managers, shares his insights on the current market trends. He discusses the impact of DII and FII investments on valuations, particularly in the mid...</p>
+							<a target="_blank" href="https://economictimes.indiatimes.com/markets/expert-view/wait-and-watch-dont-jump-the-gun-on-indian-it-companies-sampath-reddy/articleshow/115179565.cms" class="btn btn-primary primary-bg">Read more</a>
+						  </div>
+					  </div>
+					  <div class="card mb-3 pb-4 border-0 border-bottom rounded-0"	>
+						<div class="card-body">
+							<h5 class="card-title text-black">
+								<i class="icofont-link"></i> Stock &amp; Sectors Best For Investors Amid High Market Volatility | Sampath Reddy | Business News</h5>
+							<p class="card-text">Sampath Reddy suggests that investors should focus on defensive sectors such as healthcare, consumer staples, and utilities during periods of high market volatility. These sectors...</p>
+							<a target="_blank" href="https://youtu.be/6Swy9jtuEng?si=YhPhj1nef9gVVfnr" class="btn btn-primary primary-bg">Read more</a>
+						  </div>
+					  </div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="py-5 d-none">
 		<div class="auto-container">
 			<div class="row clearfix">
 				<div class="col-lg-4 mb-4">
