--- a/disclaimer.html
+++ b/disclaimer.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Azurean Investment Managers - Fund offerings</title>
-<meta name="description" content="Consulte is a free Bootstrap HTML Template for Investment Company"/>
+<meta name="description" content=""/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="profile" href="">
 <link rel="canonical" href="Replace_with_your_PAGE_URL" />
