--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                                         <h6 class="mb-0">Axis Trustee</h6>
                                     </div>
                                     <div class="ms-auto">
-                                        <img src="/images/clients/axis-trustee.png" alt="Axis Trustee Logo" class="img-fluid" style="max-height: 50px;">
+                                        <img src="./images/clients/axis-trustee.png" alt="Axis Trustee Logo" class="img-fluid" style="max-height: 50px;">
                                     </div>
                                 </div>
                             </div>
@@ -440,7 +440,7 @@
                                         <h6 class="mb-0">ICICI Bank</h6>
                                     </div>
                                     <div class="ms-auto">
-                                        <img src="/images//clients/icici-logo.png" alt="ICICI Bank Logo" class="img-fluid" style="max-height: 90px;">
+                                        <img src="./images//clients/icici-logo.png" alt="ICICI Bank Logo" class="img-fluid" style="max-height: 90px;">
                                     </div>
                                 </div>
                             </div>
@@ -457,7 +457,7 @@
                                         <h6 class="mb-0">KFintech</h6>
                                     </div>
                                     <div class="ms-auto">
-                                        <img src="/images/clients/kfintech.png" alt="KFintech Logo" class="img-fluid" style="max-height: 40px;">
+                                        <img src="./images/clients/kfintech.png" alt="KFintech Logo" class="img-fluid" style="max-height: 40px;">
                                     </div>
                                 </div>
                             </div>
@@ -474,7 +474,7 @@
                                         <h6 class="mb-0">Deloitte Haskins Sells</h6>
                                     </div>
                                     <div class="ms-auto">
-                                        <img src="/images/clients/deloitte-haskins-sells-logo.png" alt="Deloitte Logo" class="img-fluid" style="max-height: 60px;">
+                                        <img src="./images/clients/deloitte-haskins-sells-logo.png" alt="Deloitte Logo" class="img-fluid" style="max-height: 60px;">
                                     </div>
                                 </div>
                             </div>
