--- a/index.html
+++ b/index.html
@@ -421,15 +421,15 @@
                 <div class="row g-4">
                     <!-- Trustee Services -->
                     <div class="col-md-6">
-                        <div class="d-flex align-items-center p-3 bg-white rounded-3 shadow-sm h-100 border">
-                            <div class="flex-grow-1">
+                        <div class="d-flex align-items-center p-3 bg-white shadow-sm h-100 border">
+                            <div class="flex-grow-1 d-flex flex-column justify-content-between h-100">
                                 <h5 class="text-black fs-5 fw-normal mb-3">Trustee Services</h5>
                                 <div class="d-flex align-items-center">
                                     <div class="me-3">
                                         <h6 class="mb-0">Axis Trustee</h6>
                                     </div>
                                     <div class="ms-auto">
-                                        <img src="./images/clients/axis-trustee.png" alt="Axis Trustee Logo" class="img-fluid" style="max-height: 50px;">
+                                        <img src="./images/clients/axis-trustee.png" alt="Axis Trustee Logo" class="img-fluid" style="max-width: 150px;max-height:90px">
                                     </div>
                                 </div>
                             </div>
@@ -438,15 +438,15 @@
 
                     <!-- Custodial & Fund Services -->
                     <div class="col-md-6">
-                        <div class="d-flex align-items-center p-3 bg-white rounded-3 shadow-sm h-100 border">
-                            <div class="flex-grow-1">
+                        <div class="d-flex align-items-center p-3 bg-white shadow-sm h-100 border">
+                            <div class="flex-grow-1 d-flex flex-column justify-content-between h-100">
                                 <h5 class="text-black fs-5 fw-normal mb-3">Custodial &amp; Fund Accounting Services</h5>
                                 <div class="d-flex align-items-center">
                                     <div class="me-3">
                                         <h6 class="mb-0">ICICI Bank</h6>
                                     </div>
                                     <div class="ms-auto">
-                                        <img src="./images//clients/icici-logo.png" alt="ICICI Bank Logo" class="img-fluid" style="max-height: 90px;">
+                                        <img src="./images//clients/icici-logo.png" alt="ICICI Bank Logo" class="img-fluid" style="max-width: 150px;max-height:90px">
                                     </div>
                                 </div>
                             </div>
@@ -455,15 +455,15 @@
 
                     <!-- RTA -->
                     <div class="col-md-6">
-                        <div class="d-flex align-items-center p-3 bg-white rounded-3 shadow-sm h-100 border">
-                            <div class="flex-grow-1">
+                        <div class="d-flex align-items-center p-3 bg-white shadow-sm h-100 border">
+                            <div class="flex-grow-1 d-flex flex-column justify-content-between h-100">
                                 <h5 class="text-black fs-5 fw-normal mb-3">RTA</h5>
                                 <div class="d-flex align-items-center">
                                     <div class="me-3">
                                         <h6 class="mb-0">KFintech</h6>
                                     </div>
                                     <div class="ms-auto">
-                                        <img src="./images/clients/kfintech.png" alt="KFintech Logo" class="img-fluid" style="max-height: 40px;">
+                                        <img src="./images/clients/kfintech.png" alt="KFintech Logo" class="img-fluid" style="max-width: 150px;max-height:90px">
                                     </div>
                                 </div>
                             </div>
@@ -472,15 +472,15 @@
 
                     <!-- Tax Advisors -->
                     <div class="col-md-6">
-                        <div class="d-flex align-items-center p-3 bg-white rounded-3 shadow-sm h-100 border">
-                            <div class="flex-grow-1">
+                        <div class="d-flex align-items-center p-3 bg-white shadow-sm h-100 border">
+                            <div class="flex-grow-1 d-flex flex-column justify-content-between h-100">
                                 <h5 class="text-black fs-5 fw-normal mb-3">Tax Advisors</h5>
-                                <div class="d-flex align-items-center">
+                                <div class="d-flex align-items-center justify-content-between">
                                     <div class="me-3">
                                         <h6 class="mb-0">Deloitte Haskins Sells</h6>
                                     </div>
                                     <div class="ms-auto">
-                                        <img src="./images/clients/deloitte-haskins-sells-logo.png" alt="Deloitte Logo" class="img-fluid" style="max-height: 60px;">
+                                        <img src="./images/clients/deloitte-haskins-sells-logo.png" alt="Deloitte Logo" class="img-fluid" style="max-width: 150px;max-height:90px" >
                                     </div>
                                 </div>
                             </div>
