--- a/azurean-approach.html
+++ b/azurean-approach.html
@@ -158,12 +158,12 @@
 	
 	<!-- About Section -->
 	<div class="about-section">
-		<div class="auto-container">
+		<div class="auto-container wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 			<div class="inner-container">
 				<div class="row  clearfix">
 					<!-- Image Column -->
 					<div class="image-column col-lg-6">
-						<div class="about-image">
+						<div class="about-image"  >
 							<div class="about-inner-image pe-lg-4">
 								<img class="img-fluid" src="./images/about/home-about.jpg" alt="about">
 							</div>
@@ -217,7 +217,7 @@
 			</div>
 			<div class="row clearfix mt-5 mb-5">
 				<div class="col-lg-4">
-					<div class="inner-box">
+					<div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
 						<h3>Large Cap<br/> companies</h3>
 					</div>
 				</div>
@@ -232,7 +232,7 @@
 			</div>
 			<div class="row clearfix mb-5">
 				<div class="col-lg-4">
-					<div class="inner-box">
+					<div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
 						<h3>Mid Cap<br/> companies</h3>
 					</div>
 				</div>
@@ -247,7 +247,7 @@
 			</div>
 			<div class="row clearfix">
 				<div class="col-lg-4">
-					<div class="inner-box">
+					<div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
 						<h3>Small Cap<br/> companies</h3>
 					</div>
 				</div>
@@ -273,7 +273,7 @@
 			</div>
 			<div class="row clearfix">
 				<div class="col-lg-6 mb-5">
-					<div class="card h-100 border-0 shadow-sm">
+					<div class="card h-100 border-0 shadow-sm wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 						<div class="card-header primary-bg text-white py-3 rounded-0">
 							<h3 class="h4 mb-0 text-center">Bottom Up</h3>
 						</div>
@@ -311,7 +311,7 @@
 				</div>
 			</div>
 			<div class="col-lg-6 mb-5">
-				<div class="card h-100 border-0 shadow-sm">
+				<div class="card h-100 border-0 shadow-sm wow fadeInUp" data-wow-delay="2ms" data-wow-duration="1500ms">
 					<div class="card-header primary-bg text-white py-3 rounded-0">
 						<h3 class="h4 mb-0 text-center">Top Downn</h3>
 					</div>
@@ -364,7 +364,7 @@
 			</div>
 			<div class="row clearfix">
 				<div class="col-lg-6 mb-5">
-					<div class="card h-100 border-0 shadow-sm">
+					<div class="card h-100 border-0 shadow-sm wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 						<div class="card-header primary-bg text-white py-3 rounded-0">
 							<h3 class="h4 mb-0 text-center">Investment Philosophy</h3>
 						</div>
@@ -400,7 +400,7 @@
 				</div>
 			</div>
 			<div class="col-lg-6 mb-5">
-				<div class="card h-100 border-0 shadow-sm">
+				<div class="card h-100 border-0 shadow-sm wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 					<div class="card-header primary-bg text-white py-3 rounded-0">
 						<h3 class="h4 mb-0 text-center">Portfolio Construction</h3>
 					</div>
@@ -448,7 +448,7 @@
 				</div>
 				<div class="row clearfix">
 					<div class="col-lg-6 mb-5">
-						<div class="card h-100 border-0 shadow-sm">
+						<div class="card h-100 border-0 shadow-sm wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 							<div class="card-header primary-bg text-white py-3 rounded-0">
 								<h3 class="h4 mb-0 text-center"><span class="icofont-thumbs-up"></span> Businesses that we like</h3>
 							</div>
@@ -497,7 +497,7 @@
 					</div>
 				</div>
 				<div class="col-lg-6 mb-5">
-					<div class="card h-100 border-0 shadow-sm">
+					<div class="card h-100 border-0 shadow-sm wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 						<div class="card-header primary-bg text-white py-3 rounded-0">
 							<h3 class="h4 mb-0 text-center"><span class="icofont-thumbs-down"></span> Businesses that we look to avoid</h3>
 						</div>
@@ -553,9 +553,8 @@
 			<div class="sec-title">
 				<h2><span>Risk management</span></h2>
 			</div>
-			<div class="inner-container">
+			<div class="inner-container wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 				<div class="row g-0">
-				
 					<!-- Service Block -->
 					<div class="service-block col-lg-3 col-md-6 col-sm-12">
 						<div class="inner-box">
