--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,7 @@
 	<div class="contact-page-section">
 		<div class="auto-container">
 			<!-- Contact Info Boxed -->
-			<div class="contact-info-boxed">
+			<div class="contact-info-boxed wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 				<div class="row clearfix">
 					
 					<!-- Column -->
