--- a/fund-offerings.html
+++ b/fund-offerings.html
@@ -156,7 +156,7 @@
 	</div>
 	<!-- End Banner Section -->
 
-	<div class="pt-5">
+	<div class="pt-5 wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 		<div class="auto-container pt-5">
 			<ul class="fund-objectives">
 				<li><span class="icon icofont-star"></span><p><strong>Fund Name : </strong>Azurean India Equity Fund 1 is the only fund that we are
@@ -178,7 +178,7 @@
 				<!-- <div class="title">our Fund Offerings</div> -->
 				<h2><span>Key Fund Features</span></h2>
 			</div>
-			<div class="inner-container">
+			<div class="inner-container wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 				<div class="row g-0">
 				
 					<!-- Service Block -->
@@ -216,7 +216,7 @@
 	</div>
 	<!-- End Offerings Section -->
 
-	<div class="pb-5">
+	<div class="pb-5 wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 		<div class="auto-container">
 			<ul class="fund-objectives">
 				<li><p><strong class="fs-5">Investment Objective : </strong>The investment objective of the fund is to generate
@@ -239,7 +239,7 @@
 			<div class="sec-title">
 				<h2><span>Fund objectives</span></h2>
 			</div>
-			<ul class="fund-objectives pb-4">
+			<ul class="fund-objectives pb-4 wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 				<li><span class="icon icofont-star"></span><p> Azurean India Equity Fund1, is the first fund from - Azurean Investment Managers Private Limited, based at Pune</p></li>
 				<li><span class="icon icofont-star"></span><p> Investment objective is to generate capital appreciation by investing in Indian Equities. Our focus is on investing in high 
 					quality companies with good growth potential that are at reasonable value. The fund aims to invest across the market 
@@ -256,7 +256,7 @@
 	
 	<!-- Reputation Section Two -->
 	<div class="reputation-section-two style-two">
-		<div class="auto-container">
+		<div class="auto-container wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 			<div class="row clearfix">
 				
 				<!-- Form Column -->
