--- a/media.html
+++ b/media.html
@@ -160,7 +160,7 @@
 		<div class="auto-container">
 			<div class="row clearfix">
 				<div class="col-12">
-					<div class="card mb-5 pb-4 border-0 border-bottom rounded-0"	>
+					<div class="card mb-5 pb-4 border-0 border-bottom rounded-0 wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 						<div class="card-body">
 							<h5 class="card-title text-black">
 								<i class="icofont-link"></i> Bajaj Allianz Life CIO Sampath Reddy steps down, to start own fund</h5>
@@ -170,7 +170,7 @@
 							<a target="_blank" href="https://www.fortuneindia.com/people/bajaj-allianz-life-cio-sampath-reddy-steps-down-to-start-own-fund/118335" class="btn btn-primary primary-bg">Read more</a>
 						  </div>
 					  </div>
-					  <div class="card mb-3 pb-4 border-0 border-bottom rounded-0"	>
+					  <div class="card mb-3 pb-4 border-0 border-bottom rounded-0 wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 						<div class="card-body">
 							<h5 class="card-title text-black">
 								<i class="icofont-link"></i> Wait and watch! Don’t jump the gun on Indian IT companies: Sampath Reddy</h5>
@@ -178,7 +178,7 @@
 							<a target="_blank" href="https://economictimes.indiatimes.com/markets/expert-view/wait-and-watch-dont-jump-the-gun-on-indian-it-companies-sampath-reddy/articleshow/115179565.cms" class="btn btn-primary primary-bg">Read more</a>
 						  </div>
 					  </div>
-					  <div class="card mb-3 pb-4 border-0 border-bottom rounded-0"	>
+					  <div class="card mb-3 pb-4 border-0 border-bottom rounded-0 wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
 						<div class="card-body">
 							<h5 class="card-title text-black">
 								<i class="icofont-link"></i> Stock &amp; Sectors Best For Investors Amid High Market Volatility | Sampath Reddy | Business News</h5>
