--- a/fund-offerings.html
+++ b/fund-offerings.html
@@ -172,7 +172,7 @@
 	</div>
 	
 	<!-- Offerings Section -->
-	<div class="services-section section-padding">
+	<div class="services-section section-padding key-fund-features">
 		<div class="auto-container">
 			<div class="sec-title">
 				<!-- <div class="title">our Fund Offerings</div> -->
@@ -234,25 +234,6 @@
 		</div>
 	</div>
 
-	<div class="pb-5">
-		<div class="auto-container">
-			<div class="sec-title">
-				<h2><span>Fund objectives</span></h2>
-			</div>
-			<ul class="fund-objectives pb-4 wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
-				<li><span class="icon icofont-star"></span><p> Azurean India Equity Fund1, is the first fund from - Azurean Investment Managers Private Limited, based at Pune</p></li>
-				<li><span class="icon icofont-star"></span><p> Investment objective is to generate capital appreciation by investing in Indian Equities. Our focus is on investing in high 
-					quality companies with good growth potential that are at reasonable value. The fund aims to invest across the market 
-					capitalization based on the relative attractiveness of the investment opportunities</p></li>
-				<li><span class="icon icofont-star"></span><p> The fund is targeted at high-net-worth individuals with a minimum investment size of Rs1cr</p></li>
-				<li><span class="icon icofont-star"></span><p><strong>Skin in the game: </strong>Investment managers have committed substantial portion of their savings in the fund</p></li>
-				<li><span class="icon icofont-star"></span><p>The fund is <strong>open-ended</strong>, <strong>No lock-in</strong> and <strong>No Exit Load</strong>. However, we believe that the fund is suitable for the investors with 
-					time horizon of three years and beyond.</p></li>
-				<li><span class="icon icofont-star"></span><p> Investors can purchase once a week at valuation date. For details like classes of units & other details please refer to the 
-					Private Placement Memorandum (PPM)</p></li>
-			</ul>
-		</div>
-	</div>
 	
 	<!-- Reputation Section Two -->
 	<div class="reputation-section-two style-two">
