--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
 						<div class="content-column col-lg-7 col-md-12 col-sm-12">
 							<div class="inner-column">
 								<div class="title">India Focused Investment Management firm</div>
-								<h1>Clever <span>Investing</span> Make Your Money Grow</h1>
-								<div class="text">Capitalise on low hanging fruit to identify a ballpark <br> value added activity to beta test. Override the digital divide <br> with additional base clickthroughs.</div>
+								<h1>Smart <span>Investing</span> makes your wealth grow</h1>
+								<div class="text">Azurean is a smart partner to investors. It is founded by experienced investment professionals to generate wealth through sound principles. Our maiden fund Azurean India Equity Fund 1 is registered as category III AIF with SEBI</div>
 							</div>
 						</div>
 						
