--- a/azurean-approach.html
+++ b/azurean-approach.html
@@ -238,10 +238,10 @@
 				</div>
 				<div class="col-lg-8 px-5">
 					<ul>
-						<li><p>Seek out large, well-managed companies that are <strong>consistent compounders.</strong></p></li>
-						<li><p>Effective <strong>sector allocation</strong> is crucial source of alpha</p></li>
-						<li><p>By <strong>aligning with market growth proxies</strong>, strive to generate alpha through strategic 
-							sector choices.</p></li>
+						<li><p> Invest in companies experiencing robust <strong>growth driven by niche offerings</strong>.</p></li>
+						<li><p> These firms possess a <strong>"right to win"</strong> attributable to their technology, brand strength, 
+							expansive market opportunities, or strategic positioning.</p></li>
+						<li><p><strong>Effective stock selection serves</strong> as the primary driver of alpha</p></li>
 					</ul>
 				</div>
 			</div>
@@ -253,10 +253,9 @@
 				</div>
 				<div class="col-lg-8 px-5">
 					<ul>
-						<li><p>Seek out large, well-managed companies that are <strong>consistent compounders.</strong></p></li>
-						<li><p>Effective <strong>sector allocation</strong> is crucial source of alpha</p></li>
-						<li><p>By <strong>aligning with market growth proxies</strong>, strive to generate alpha through strategic 
-							sector choices.</p></li>
+						<li><p>Look for companies with <strong>strong growth prospects operating in emerging businesses</strong>.</p></li>
+						<li><p><strong>Founder's vision and Management team's execution track record</strong> especially in 
+							navigating challenges and seizing opportunities are the key reasons for winning.</p></li>
 					</ul>
 				</div>
 			</div>
@@ -299,14 +298,7 @@
 									</span>
 									<div>The team has <strong>decades of experience</strong> in understanding businesses across diverse sectors focusing on nuances that affect their profitability and long-term value creation potential.</div>
 								</li>
-								<li class="list-group-item border-0 d-flex align-items-start py-3">
-									<span class="primary-bg bg-opacity-10 p-2 rounded-circle me-3 mt-1">
-									</span>
-									<div>The big money is not in buying and selling…but in the waiting
-										Jesse Livermore
-										</div>
-								</li>
-							</ul>
+								</ul>
 						</div>
 				</div>
 			</div>
@@ -352,9 +344,29 @@
 			</div>
 		</div>
 		</div>
+		<div class="quote-box d-none p-5 primary-bg text-white text-center">
+			The big money is not in buying and selling…but in the waiting<br/>
+			<span>- Jesse Livermore</span>
+		</div>
 	</div>
 	</div>
 	<!-- End Investment Philosophy -->
+
+
+	<div class="cta-section" data-bg-image="images/background/productCurvyLines.png" style="background-image: url(&quot;images/background/productCurvyLines.png&quot;);">
+		<div class="auto-container">
+			<div class="row align-items-center">
+				<div class="col-12 text-center">
+					<!-- CTA Content Start -->
+					<div class="cta-content">
+						<h3 class="title">The big money is not in buying and selling…but in the waiting</h3>
+						<p>- Jesse Livermore</p>
+					</div>
+					<!-- CTA Content End -->
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<!-- Investment Philosophy -->
 	<div class="py-5 investment-philosophy py-5">
@@ -546,9 +558,26 @@
 		</div>
 	<!-- End Investment Philosophy -->
 
+	<div class="cta-section" data-bg-image="images/background/productCurvyLines.png" style="background-image: url(&quot;images/background/productCurvyLines.png&quot;);">
+		<div class="auto-container">
+			<div class="row align-items-center">
+				<div class="col-12 text-center">
+					<!-- CTA Content Start -->
+					<div class="cta-content">
+						<h3 class="title">It’s far better to buy a wonderful 
+							company at a fair price than a fair 
+							company at a wonderful price</h3>
+						<p>- Warren Buffett</p>
+					</div>
+					<!-- CTA Content End -->
+				</div>
+			</div>
+		</div>
+	</div>
+
 
 	<!-- Risk Management -->
-	<div class="services-section section-padding">
+	<div class="services-section section-padding risk-management">
 		<div class="auto-container">
 			<div class="sec-title">
 				<h2><span>Risk management</span></h2>
