--- a/newsletter.html
+++ b/newsletter.html
@@ -62,7 +62,7 @@
 						<ul class="info-list">
 							<li><a href="mailto:support@azurean.in"><span class="icon icofont-envelope"></span> support@azurean.in</a></li>
 							<li>
-								<a href="tel:99233 78853"><span class="icon icofont-phone"></span> 99233 78853</a>
+								<a href="tel:+91 99233 78853"><span class="icon icofont-phone"></span>+91 99233 78853</a>
 							</li>
 						</ul>
 					</div>
@@ -150,7 +150,7 @@
 	<div class="service-banner-section py-5" data-bg-image="images/background/media-banner.png">
 		<div class="auto-container pb-5">
 			<div class="content-box pb-5">
-				<h2>News<span> letter</span></h2>
+				<h2><span>Newsletter</span></h2>
 			</div>
 		</div>
 	</div>
@@ -206,8 +206,8 @@
 									<h5>Quick Links</h5>
 									<ul class="list-link">
 										<li><a href="/disclaimer.html">Disclaimer</a></li>
-										<li><a href="/privacy-policy">Privacy Policy</a></li>
-										<li><a href="/terms-of-service">Terms of Service</a></li>
+										<li><a href="#">Privacy Policy</a></li>
+										<li><a href="#">Terms of Service</a></li>
 									</ul>
 								</div>
 							</div>
@@ -215,7 +215,7 @@
 							<!-- Footer Column -->
                             <div class="footer-column col-lg-6 col-md-6 col-sm-12">
                                 <div class="footer-widget newsletter-widget">
-									<h5>Call us directly</h5>
+									<h5>Contact us at</h5>
 									<ul class="list-link">
 										<li><a class="phone" href="tel:+919923378853">+91 99233 78853</a>,</li>
 										<li><a class="email" href="mailto:support@azurean.in">support@azurean.in</a></li>
