--- a/fund-offerings.html
+++ b/fund-offerings.html
@@ -62,7 +62,7 @@
 						<ul class="info-list">
 							<li><a href="mailto:support@azurean.in"><span class="icon icofont-envelope"></span> support@azurean.in</a></li>
 							<li>
-								<a href="tel:99233 78853"><span class="icon icofont-phone"></span> 99233 78853</a>
+								<a href="tel:+91 99233 78853"><span class="icon icofont-phone"></span>+91 99233 78853</a>
 							</li>
 						</ul>
 					</div>
@@ -150,7 +150,7 @@
 	<div class="service-banner-section py-5" data-bg-image="images/background/fundoffer-banner.png">
 		<div class="auto-container pb-5">
 			<div class="content-box pb-5">
-				<h2>Our<span> Fund Offerings</span></h2>
+				<h2><span>Our Fund Offerings</span></h2>
 			</div>
 		</div>
 	</div>
@@ -252,7 +252,7 @@
 					<div class="inner-column">
 						<div class="sec-title">
 							<div class="title">why choose us</div>
-							<h2><span>Your Success </span>Is<br> Our Reputation</h2>
+							<h2><span>Your Satisfaction is<br> our Success</span></h2>
 						</div>
 						<div class="blocks-outer">
 							
@@ -271,9 +271,9 @@
 								<div class="inner-box">
 									<h5>Focussed on success of this fund</h5>
 									<div class="text">We only have one fund, “ Azurean India Equity fund 1” under management which invests
-										across the market capitalisation based on our view. We intend to focus on managing only
-										one fund as of now. Sponsors of the fund have invested substantial portion of their savings
-										in the fund</div>
+										across the market capitalisation based on our view.  Sponsors of the fund have invested substantial portion of their savings
+										in the fund. We intend to focus on managing only
+										one fund as of now.</div>
 								</div>
 							</div>
 							
@@ -343,8 +343,8 @@
 									<h5>Quick Links</h5>
 									<ul class="list-link">
 										<li><a href="/disclaimer.html">Disclaimer</a></li>
-										<li><a href="/privacy-policy">Privacy Policy</a></li>
-										<li><a href="/terms-of-service">Terms of Service</a></li>
+										<li><a href="#">Privacy Policy</a></li>
+										<li><a href="#">Terms of Service</a></li>
 									</ul>
 								</div>
 							</div>
@@ -352,7 +352,7 @@
 							<!-- Footer Column -->
                             <div class="footer-column col-lg-6 col-md-6 col-sm-12">
                                 <div class="footer-widget newsletter-widget">
-									<h5>Call us directly</h5>
+									<h5>Contact us at</h5>
 									<ul class="list-link">
 										<li><a class="phone" href="tel:+919923378853">+91 99233 78853</a>,</li>
 										<li><a class="email" href="mailto:support@azurean.in">support@azurean.in</a></li>
