--- a/azurean-approach.html
+++ b/azurean-approach.html
@@ -147,7 +147,7 @@
     <!--End Main Header -->
 	
 	<!-- Banner Section -->
-	<div class="service-banner-section py-5" data-bg-image="images/background/service-bg.jpg">
+	<div class="service-banner-section py-5" data-bg-image="images/background/fundoffer-banner.png">
 		<div class="auto-container pb-5">
 			<div class="content-box pb-5">
 				<h2><span>Azurean Approach</span></h2>
