--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 							<div class="navbar-collapse show collapse clearfix" id="navbarSupportedContent">
 								<ul class="navigation clearfix">
-									<li class="current"><a href="#">Home</a></li>
+									<li class="current"><a href="index.html">Home</a></li>
 									<li><a href="azurean-approach.html">Azurean approach</a></li>
 									<li><a href="fund-offerings.html">Fund Offerings</a></li>
 									<li class="dropdown"><a href="#">Investor Update</a>
